[package]
name = "form"
version = "0.1.8"
authors = ["J-F Bilodeau <jfbilodeau@chronogears.com>"]
edition = "2018"

[dependencies]
regex = "1"
validator = "0.16.1"
validator_derive = "0.16.0"
wasm-bindgen = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
yew_form =  { path = "../../yew_form", version = "0.2.0"}
yew_form_derive =  { path = "../../yew_form_derive", version = "0.2.0"}
